--- a/appoinment.html
+++ b/appoinment.html
@@ -14,7 +14,7 @@
       <div class="row justify-content-center">
         <div class="col-md-6 col-lg-4 mt-5">
           <div class="card shadow p-4">
-            <h2 class="text-center mb-4">Photoshot Raya DayangYunk</h2>
+            <h2 class="text-center mb-4">Book an Appointment</h2>
             <form id="bookingForm">
               <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
@@ -154,13 +154,21 @@
         const month = dateObj.toLocaleString("en-US", { month: "long" }); // Get full month (March)
         const formattedDate = `${day}${month}`; // "7March"
 
+        // ✅ Convert Time to "320PM" format
+        const [hours, minutes] = timeInput.split(":");
+        let hourNum = parseInt(hours, 10);
+        const period = hourNum >= 12 ? "PM" : "AM"; // Determine AM/PM
+        hourNum = hourNum % 12 || 12; // Convert 24-hour to 12-hour format
+        const formattedTime = `${hourNum}${minutes}`.replace(/\s/g, ""); 
 
+        console.log(formattedTime);
+        console.log(timeInput);
         // ✅ Final Data Object
         const formData = {
           name,
           phone,
           date: formattedDate,
-          time: timeInput,
+          time: formattedTime,
           people,
           payment,
         };
