--- a/appoinment.html
+++ b/appoinment.html
@@ -14,7 +14,7 @@
       <div class="row justify-content-center">
         <div class="col-md-6 col-lg-4 mt-5">
           <div class="card shadow p-4">
-            <h2 class="text-center mb-4">Book an Appointment</h2>
+            <h2 class="text-center mb-4">Photoshot Raya DayangYunk</h2>
             <form id="bookingForm">
               <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
@@ -54,7 +54,6 @@
                   type="number"
                   id="people"
                   class="form-control"
-                  placeholder="10"
                   required
                 />
               </div>
@@ -175,7 +174,7 @@
 
         try {
           const response = await fetch(
-            "https://script.google.com/macros/s/AKfycbwXVOV3mNmsEytRQQ1P4TY9JlCAFY2RaMUypcQAqKvoRxg3qMiqi63ZkJRKBQJOvji7KQ/exec",
+            "https://script.google.com/macros/s/AKfycbypU0HmxiT2CU8iDhvydWqre3tjXN_AyhsM_Run3qZD_Kbv5GDQJk1Qu41G5iXy5UqFPw/exec",
             {
               method: "POST",
               headers: {
@@ -206,26 +205,6 @@
         .getElementById("bookingForm")
         .addEventListener("submit", submitAppointment);
 
-      async function fetchAppointments() {
-        try {
-          const response = await fetch(
-            "https://script.google.com/macros/s/AKfycbwXVOV3mNmsEytRQQ1P4TY9JlCAFY2RaMUypcQAqKvoRxg3qMiqi63ZkJRKBQJOvji7KQ/exec"
-          );
-          const data = await response.json();
-
-          console.log(data);
-          if (data.status === "success") {
-            displayAppointments(data.data);
-          } else {
-            console.error("Error fetching appointments:", data.message);
-          }
-        } catch (error) {
-          console.error("Fetch error:", error);
-        }
-      }
-
-      // Call the function when the page loads
-      window.onload = fetchAppointments;
     </script>
   </body>
 </html>
