--- a/appoinment.html
+++ b/appoinment.html
@@ -18,22 +18,12 @@
             <form id="bookingForm">
               <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
-                <input
-                  type="text"
-                  id="name"
-                  class="form-control"
-                  required
-                />
+                <input type="text" id="name" class="form-control" required />
               </div>
 
               <div class="mb-3">
                 <label for="phone" class="form-label">Phone Number</label>
-                <input
-                  type="text"
-                  id="phone"
-                  class="form-control"
-                  required
-                />
+                <input type="text" id="phone" class="form-control" required />
               </div>
 
               <div class="mb-3">
@@ -59,7 +49,9 @@
               </div>
 
               <div class="mb-3">
-                <label for="payment" class="form-label">Payment Amount(RM)</label>
+                <label for="payment" class="form-label"
+                  >Payment Amount(RM)</label
+                >
                 <input
                   type="number"
                   id="payment"
@@ -78,6 +70,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script>
       // List of time slots
       const timeSlots = [
@@ -158,7 +152,7 @@
         let hourNum = parseInt(hours, 10);
         const period = hourNum >= 12 ? "PM" : "AM"; // Determine AM/PM
         hourNum = hourNum % 12 || 12; // Convert 24-hour to 12-hour format
-        const formattedTime = `${hourNum}${minutes}`.replace(/\s/g, ""); 
+        const formattedTime = `${hourNum}${minutes}`.replace(/\s/g, "");
 
         console.log(formattedTime);
         console.log(timeInput);
@@ -174,7 +168,7 @@
 
         try {
           const response = await fetch(
-            "https://script.google.com/macros/s/AKfycbypU0HmxiT2CU8iDhvydWqre3tjXN_AyhsM_Run3qZD_Kbv5GDQJk1Qu41G5iXy5UqFPw/exec",
+            "https://script.google.com/macros/s/AKfycbwgJUIoLPcuw7k03jxBnyzbekVe4b-NwaY0TOS7q8oEXYwRS5W8Q_yMlhosffUlc8rfwA/exec",
             {
               method: "POST",
               headers: {
@@ -188,11 +182,26 @@
           const data = JSON.parse(text); // ✅ Manually parse JSON
           console.log(data);
           if (data.status === "success" && data.id) {
-            alert(`Success! Appointment ID: ${data.id}`);
+            Swal.fire({
+              title: "Success!",
+              html: `<strong>Appointment ID:</strong> ${data.id}<br><strong>Name:</strong> ${data.name}<br><strong>Date:</strong> ${data.date}<br><strong>Time:</strong> ${data.time}`,
+              icon: "success",
+              confirmButtonText: "Okay",
+            });
           } else if (data.status === "duplicate") {
-            alert("Error: This appointment already exists.");
+            Swal.fire({
+              title: "Error",
+              text: "This appointment already exists.",
+              icon: "error",
+              confirmButtonText: "Okay",
+            });
           } else {
-            alert("Error: " + (data.message || "Unknown error occurred."));
+            Swal.fire({
+              title: "Error",
+              text: data.message || "Unknown error occurred.",
+              icon: "error",
+              confirmButtonText: "Okay",
+            });
           }
         } catch (error) {
           console.error("Error:", error);
@@ -204,7 +213,6 @@
       document
         .getElementById("bookingForm")
         .addEventListener("submit", submitAppointment);
-
     </script>
   </body>
 </html>
