--- a/table.html
+++ b/table.html
@@ -25,8 +25,10 @@
       }
       .booked {
         background-color: red;
-        color: white;
+        color: blue;
+        text-decoration: underline;
         font-weight: bold;
+        cursor: pointer;
       }
     </style>
   </head>
@@ -43,12 +45,53 @@
           </thead>
           <tbody id="tableBody"></tbody>
         </table>
+        <!-- Bootstrap Modal -->
+        <div
+          class="modal fade"
+          id="bookingModal"
+          tabindex="-1"
+          aria-labelledby="modalTitle"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalTitle">Booking Details</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body" id="modalBody">
+                <!-- Booking details will be inserted here -->
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Close
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Bootstrap CSS & JS (Include if not already added) -->
+        <link
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+        />
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
       </div>
     </div>
 
     <script>
       const API_URL =
-        "https://script.google.com/macros/s/AKfycbypU0HmxiT2CU8iDhvydWqre3tjXN_AyhsM_Run3qZD_Kbv5GDQJk1Qu41G5iXy5UqFPw/exec"; // Replace with your actual API URL
+        "https://script.google.com/macros/s/AKfycbwgJUIoLPcuw7k03jxBnyzbekVe4b-NwaY0TOS7q8oEXYwRS5W8Q_yMlhosffUlc8rfwA/exec"; // Replace with your actual API URL
 
       // Convert "7March" to YYYY-MM-DD format
       function parseCustomDate(dateString) {
@@ -188,6 +231,37 @@
         ];
       }
 
+      function showBookingDetails(booking) {
+        let modalTitle = document.getElementById("modalTitle");
+        let modalBody = document.getElementById("modalBody");
+
+        // Convert time to 12-hour format with AM/PM
+        let formattedTime = formatTimeTo12Hour(booking.time);
+
+        modalTitle.textContent = "Booking Details";
+        modalBody.innerHTML = `
+    <p><strong>Date:</strong> ${booking.date}</p>
+    <p><strong>Time:</strong> ${formattedTime}</p>
+    <p><strong>Name:</strong> ${booking.name || "N/A"}</p>
+    <p><strong>Phone:</strong> ${booking.phone || "N/A"}</p>
+    <p><strong>People:</strong> ${booking.people || "N/A"} people</p>
+    <p><strong>Payment:</strong> RM${booking.payment || "0.00"}</p>
+  `;
+
+        let bookingModal = new bootstrap.Modal(
+          document.getElementById("bookingModal")
+        );
+        bookingModal.show();
+      }
+
+      // ✅ Function to Convert Time to 12-Hour Format with AM/PM
+      function formatTimeTo12Hour(timeString) {
+        let [hours, minutes] = timeString.split(":").map(Number);
+        let period = hours >= 12 ? "PM" : "AM";
+        hours = hours % 12 || 12; // Convert 24-hour to 12-hour format
+        return `${hours}:${minutes.toString().padStart(2, "0")} ${period}`;
+      }
+
       // Fetch bookings from API
       async function fetchBookings() {
         try {
@@ -195,10 +269,14 @@
           let result = await response.json();
 
           if (result.status === "success") {
-            // console.log(result.data);
+            console.log(result.data);
             return result.data.map((b) => ({
               date: parseCustomDate(b.date),
               time: parseCustomTime(b.time),
+              name: b.name, // ✅ Include Name
+              phone: b.phone, // ✅ Include Phone
+              people: b.people, // ✅ Include Number of People
+              payment: b.payment, // ✅ Include Payment
             }));
           } else {
             console.error("Failed to fetch bookings");
@@ -216,7 +294,8 @@
         let headers = getHead();
         let timeSlots = getTimeSlots();
         let bookings = await fetchBookings();
-        console.log(bookings);
+        // console.log(bookings);
+
         let tableHead = document.getElementById("tableHead");
         let tableBody = document.getElementById("tableBody");
 
@@ -242,21 +321,21 @@
           // Fill each date column
           dates.forEach((date) => {
             let cell = document.createElement("td");
-            let isBooked = bookings.some((b) => {
+            let booking = bookings.find((b) => {
               let bookedDate = b.date;
               let bookedTime = convertTo12HourFormat(b.time); // Convert to 12-hour format
 
-              console.log(
-                `Checking: Date(${bookedDate}) == ${date}, Time(${bookedTime}) == ${time}`
-              );
-
               return bookedDate === date && bookedTime === time;
             });
-            if (isBooked) {
+
+            if (booking) {
               cell.textContent = "Booked";
               cell.classList.add("booked");
+
+              // ✅ Add click event to show booking details
+              cell.addEventListener("click", () => showBookingDetails(booking));
             } else {
-              cell.textContent = "Available";
+              cell.textContent = "";
             }
 
             row.appendChild(cell);
