--- a/table.html
+++ b/table.html
@@ -30,6 +30,9 @@
         font-weight: bold;
         cursor: pointer;
       }
+      .modal {
+        z-index: 1050 !important; /* Make sure modal is on top */
+      }
     </style>
   </head>
   <body>
@@ -80,11 +83,16 @@
           </div>
         </div>
 
-        <!-- Bootstrap CSS & JS (Include if not already added) -->
+        <!-- Bootstrap CSS -->
         <link
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css"
           rel="stylesheet"
         />
+
+        <!-- Bootstrap JS (requires Popper.js) -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
       </div>
     </div>
