--- a/dayang-yunk-appointments.html
+++ b/dayang-yunk-appointments.html
@@ -134,7 +134,7 @@
 
     <script>
       const API_URL =
-        "https://script.google.com/macros/s/AKfycbwWKg3xbLS5DUCTsICzfNkOgLVRUyqRVlHyLguJKrbbtBJOerQpJpkjDvM8z63rtlUfxg/exec"; // Replace with your actual API URL
+        "https://script.google.com/macros/s/AKfycbyOsSSZe5sKOcSIQwd0JA9p6BIu8g3jqwaOENkbHNbvdH4KCL4k06dQn--DGEcDOOqW2g/exec"; // Replace with your actual API URL
 
       // Convert "7March" to YYYY-MM-DD format
       function parseCustomDate(dateString) {
@@ -189,9 +189,9 @@
 
       // Generate dates from today to April 10
       function getDateRange() {
-        let rawToday = new Date();
-        let today = new Date(rawToday.getTime() + 8 * 60 * 60 * 1000); // Add 8 hours
-        let endDate = new Date("2025-03-30");
+        let today = new Date("2025-03-10");
+        // let today = new Date(rawToday.getTime() + 8 * 60 * 60 * 1000); // Add 8 hours
+        let endDate = new Date("2025-04-06");
         let dateArray = [];
 
         while (today <= endDate) {
@@ -203,9 +203,9 @@
       }
 
       function getHead() {
-        let today = new Date();
+        let today = new Date("2025-03-10");
         // let today = new Date(rawToday.getTime() + 8 * 60 * 60 * 1000); // Add 8 hours
-        let endDate = new Date("2025-03-30");
+        let endDate = new Date("2025-04-06");
         let dateArray = [];
 
         console.log(today);
@@ -322,9 +322,13 @@
     <p><strong>No IC:</strong> ${booking.noIc || "N/A"}</p>
     <p><strong>People:</strong> ${booking.people || "N/A"} people</p>
     <p><strong>Package:</strong> ${booking.package || "N/A"}</p>
+    <p><strong>Add Ons:</strong> ${booking.addOns || "N/A"}</p>
     <p><strong>Deposit:</strong> RM${booking.deposit || "0.00"}</p>
+    <p><strong>Discount:</strong> RM${booking.discount || "0.00"}</p>
     <p><strong>Payment:</strong> RM${booking.payment || "0.00"}</p>
+    <p><strong>Balance:</strong> RM${booking.balance || "0.00"}</p>
     <p><strong>Promoter:</strong> ${booking.promoter || "N/A"}</p>
+    <p><strong>Remarks:</strong> ${booking.remarks || "N/A"}</p>
 
     <label for="statusSelect"><strong>Status:</strong></label>
         <select id="statusSelect" class="form-control">
@@ -382,6 +386,10 @@
               payment: b.payment, // ✅ Include Payment
               promoter: b.promoter, // ✅ Include Payment
               status: b.status, // ✅ Include Payment
+              addOns: b.addOns, // ✅ Include Payment
+              balance: b.balance, // ✅ Include Payment
+              discount: b.discount, // ✅ Include Payment
+              remarks: b.remarks, // ✅ Include Payment
             }));
           } else {
             console.error("Failed to fetch bookings");
@@ -455,7 +463,7 @@
           // Fill each date column
           dates.forEach((date) => {
             let cell = document.createElement("td");
-            let parts = date.split(" "); // ["7", "Mar"]
+            let parts = date.split("-"); // ["7", "Mar"]
             let monthNames = [
               "Jan",
               "Feb",
@@ -470,18 +478,16 @@
               "Nov",
               "Dec",
             ];
-            let monthIndex = monthNames.indexOf(parts[1]);
-            let day = parseInt(parts[0]);
-            let currentDate = new Date(2025, monthIndex, day);
-            let isWeekend = false;
-            console.log("checkl");
-            console.log(currentDate.getDay());
-            if (currentDate.getDay() === 6 || currentDate.getDay() === 0) {
-              // 6 = Saturday, 0 = Sunday
-              isWeekend = true;
-              console.log("isWeekend");
-              console.log(isWeekend);
-            }
+            console.log("parts");
+            console.log(parts);
+
+            let year = parseInt(parts[0]); // 2025
+            let month = parseInt(parts[1]); // 03
+            let day = parseInt(parts[2]); // 31
+
+            let currentDate = new Date(year, month - 1, day); // Month is zero-based in JS
+            let isWeekend =
+              currentDate.getDay() === 6 || currentDate.getDay() === 0; // Saturday or Sunday
 
             // ✅ Check for Rest Periods
             if (
@@ -509,6 +515,22 @@
               let booking = bookings.find((b) => {
                 let bookedDate = b.date;
                 let bookedTime = convertTo12HourFormat(b.time);
+                // console.log("============");
+
+                // if(bookedDate == "2025-03-16"){
+                //   console.log(bookedDate);
+                //   console.log(bookedTime);
+                //   console.log("============");
+                //   console.log(b.date);
+                //   console.log(b.time);
+                // }
+                // if (bookedDate === date && bookedTime === time) {
+                //   console.log(bookedDate);
+                //   console.log(bookedTime);
+                //   console.log("============");
+                //   console.log(b.date);
+                //   console.log(b.time);
+                // }
 
                 return bookedDate === date && bookedTime === time;
               });
