--- a/dayang-yunk-appointments.html
+++ b/dayang-yunk-appointments.html
@@ -535,7 +535,7 @@
                 return bookedDate === date && bookedTime === time;
               });
 
-              if (booking) {
+              if (booking.status != 'Cancelled') {
                 console.log("Booking Found:", booking);
 
                 cell.textContent = "Booked";
