--- a/dayang-yunk-photoshot-raya.html
+++ b/dayang-yunk-photoshot-raya.html
@@ -535,7 +535,7 @@
                 return bookedDate === date && bookedTime === time;
               });
 
-              if (booking) {
+              if (booking && booking.status != 'Cancelled') {
                 console.log("Booking Found:", booking);
                 if (booking.status == "Booked") {
                   cell.textContent = "Booked";
